--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -2,7 +2,7 @@
 <head>
   <title>{{page.title}}</title>
   <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-  <link rel="stylesheet" href="../../resources/css/slides-jjv.css" type="text/css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="../resources/css/slides-jjv.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <!--
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
@@ -21,8 +21,8 @@
   <div id="slides">
     {{ content }}
   </div>
-  <script src="../../resources/js/slides.js"></script>
-  <script src="../../resources/js/trim.js"></script>
-  <script src="../../resources/js/main.js"></script>
+  <script src="../resources/js/slides.js"></script>
+  <script src="../resources/js/trim.js"></script>
+  <script src="../resources/js/main.js"></script>
 </body>
 </html>
